support for dragdorp

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
 	"name": "Three.js Inspector",
 	"short_name": "3jsInspect",
-	"version": "1.2.0-dev",
+	"version": "1.2.1",
 	"minimum_chrome_version": "10.0",
 	"devtools_page": "devtools.html",
 	"icons": {
@@ -27,7 +27,7 @@
 		"webNavigation"
 	],
 	"manifest_version": 2,
-	"content_security_policy": "default-src 'self' chrome-extension-resource: ; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval'; connect-src *; frame-src *;",
+	"content_security_policy": "default-src 'self' chrome-extension-resource: ; img-src * ; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-eval'; connect-src *; frame-src *;",
 	"web_accessible_resources": [
 		"*"
 	]
