--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-        "name": "three.js extension2",
+        "name": "three.js inspector2",
         "version": "1.0.0",
         "manifest_version": 2,
         "description": "super description",
