--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-        "name": "three.js inspector",
+        "name": "three.js inspector-dev",
         "version": "1.9.0",
         "manifest_version": 2,
         "description": "super description",
